CHG : Model exporter now supports biped. FIX : Model scripts fixed for biped exporting. CHG : Map exporter win 32 windows changed with Qt windows and progress dialogs.
svn path=/trunk/; revision=1062

--- a/Source/ZE3dsMax/CMakeLists.txt
+++ b/Source/ZE3dsMax/CMakeLists.txt
@@ -51,6 +51,7 @@ link_directories(
 add_subdirectory(ZE3dsProgressDialog)
 add_subdirectory(ZE3dsModelExporter)
 add_subdirectory(ZE3dsMapExporter)
+add_subdirectory(ZE3dsMaxScript)
 
 add_custom_target(ZE3dsMax
 	SOURCES CMakeLists.txt)
