FIX: ZEVariant.cpp function SetString(const ZEString& Value) bug has fixed. FIX: <TEST> SetString(const ZEString& Value) tests added. FIX: ZEGUID.cpp Compare function's bug has fixed. ADD: ZEEndianTests.cpp, ZEGUIDTests.cpp, ZERandomTests.cpp, ZETimeCounterTests.cpp added.
svn path=/trunk/; revision=1074

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -59,10 +59,12 @@ ze_add_source(ZECommon.h 			Sources Headers)
 ze_add_source(ZECommon.cpp 			Sources)
 ze_add_source(ZEGUID.h 				Sources Headers)
 ze_add_source(ZEGUID.cpp 			Sources)
+ze_add_source(ZEGUIDTests.cpp			Tests)
 ze_add_source(ZETypes.h 			Sources Headers)
 ze_add_source(ZETypes.cpp 			Sources)
 ze_add_source(ZEEndian.h 			Sources Headers)
 ze_add_source(ZEEndian.cpp 			Sources)
+ze_add_source(ZEEndianTests.cpp			Tests)
 ze_add_source(ZESwap.h 				Sources Headers)
 ze_add_source(ZESwap.cpp 			Sources)
 ze_add_source(ZEError.h 			Sources Headers)
@@ -70,11 +72,13 @@ ze_add_source(ZEError.cpp 			Sources)
 ze_add_source(ZELog.h				Sources Headers)
 ze_add_source(ZELog.cpp				Sources)
 ze_add_source(ZEPacking.h 			Sources Headers)
-ze_add_source(ZEPacking.cpp 		Sources)
+ze_add_source(ZEPacking.cpp 			Sources)
 ze_add_source(ZERandom.h 			Sources Headers)
 ze_add_source(ZERandom.cpp 			Sources)
-ze_add_source(ZETimeCounter.h		Headers)
-ze_add_source(ZETimeCounter.cpp		Sources)
+ze_add_source(ZERandomTests.cpp			Tests)
+ze_add_source(ZETimeCounter.h			Headers)
+ze_add_source(ZETimeCounter.cpp			Sources)
+ze_add_source(ZETimeCounterTests.cpp		Tests)
 
 ze_add_library(ZEFoundation 
 	SOURCES ${Sources} 
@@ -83,5 +87,10 @@ ze_add_library(ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION ZEFoundation
 	INSTALL_COMPONENT ZESDK)
+
+ze_add_test(ZEFoundationTests
+	SOURCES ${Tests}
+	EXTRA_SOURCES
+	TEST_TARGET ZEFoundation)
 
 ze_link(ZEFoundation LIBS rt PLATFORMS Unix)
