ADD : ZEResourceConfigurator added to ZEToolComponents
svn path=/branches/v0.5.5-NewTools/; revision=1075

--- a/Source/ZEToolComponents/ZEResourceConfigurationWidget/CMakeLists.txt
+++ b/Source/ZEToolComponents/ZEResourceConfigurationWidget/CMakeLists.txt
@@ -35,18 +35,25 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-project (ZEToolComponents)
-ze_set_project_folder("ZEToolComponents")
 
-add_subdirectory(ZEProgressDialog)
-add_subdirectory(ZEResourceConfigurationWidget)
+ze_add_source(ZEResourceOptionWidget.ui			Sources QtUI)
+ze_add_source(ZEResourceConfigurationWidget.ui	Sources QtUI)
+ze_add_source(ZEResourceConfigurationWidget.h	Sources)
+ze_add_source(ZEResourceConfigurationWidget.cpp	Sources)
+ze_add_source(ZEResourceOptionWidget.h			Sources QtMocs)
+ze_add_source(ZEResourceOptionWidget.cpp		Sources)
+ze_add_source(ZEResourceOption.h				Sources)
+ze_add_source(ZEResourceOptionTreeItem.cpp		Sources)
+ze_add_source(ZEResourceOptionTreeItem.h		Sources)
+ze_add_source(ZEResourceConfigurationWidgetSignalHandler.cpp	Sources)
+ze_add_source(ZEResourceConfigurationWidgetSignalHandler.h		Sources QtMocs)
+ze_add_source(ZEResourceOption.h		Sources)
 
-ze_add_source(ZEToolComponentsMain.cpp		Sources)
+qt4_add_resources (QtResourceFiles ${QtResources})
+qt4_wrap_ui (QtUIFiles ${QtUI})
+qt4_wrap_cpp (QtMocFiles  ${QtMocs})
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-ze_add_executable(ZEToolComponents 
-	SOURCES ${Sources}
-	LIBS
-		ZEFoundation ZEProgressDialog ZEResourceConfigurationWidget
-		QtCore4 QtGui4)
+ze_add_library(ZEResourceConfigurationWidget 
+	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles})
