FIX: Fixing missing commit
svn path=/branches/v0.6.1-NewGraphics/; revision=1088

--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -35,60 +35,66 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEAllocator.cpp				Sources)
+ze_add_source(ZEAllocator.cpp			Sources)
 ze_add_source(ZEAllocator.h				Sources Headers)
 ze_add_source(ZEArray.cpp				Sources)
 ze_add_source(ZEArray.h					Sources Headers)
-ze_add_source(ZEArrayIterators.cpp			Sources)
-ze_add_source(ZEArrayIterators.h			Sources Headers)
-ze_add_source(ZEArrayTests.cpp				Tests)
-ze_add_source(ZEDelegate.cpp				Sources)
+ze_add_source(ZEArrayIterators.cpp		Sources)
+ze_add_source(ZEArrayIterators.h		Sources Headers)
+ze_add_source(ZEArrayTests.cpp			Tests)
+ze_add_source(ZEDelegate.cpp			Sources)
 ze_add_source(ZEDelegate.h				Sources Headers)
-ze_add_source(ZEDelegateImp.h				Sources Headers)
-ze_add_source(ZEDelegateTests.cpp			Tests)
-ze_add_source(ZEFastDelegate.h				Sources Headers)
-ze_add_source(ZEFastDelegateBind.h			Sources Headers)
+ze_add_source(ZEDelegateImp.h			Sources Headers)
+ze_add_source(ZEDelegateTests.cpp		Tests)
+ze_add_source(ZEFastDelegate.h			Sources Headers)
+ze_add_source(ZEFastDelegateBind.h		Sources Headers)
 ze_add_source(ZEFlags.cpp				Sources)
 ze_add_source(ZEFlags.h					Sources Headers)
-ze_add_source(ZEFlagsTests.cpp				Tests)
+ze_add_source(ZEFlagsTests.cpp			Tests)
+ze_add_source(ZEHashGenerator.h			Sources Headers)
+ze_add_source(ZEHashGenerator.cpp		Sources)
 ze_add_source(ZEHeapBase.h				Sources Headers)
-ze_add_source(ZEHeapBase.cpp				Sources)
+ze_add_source(ZEHeapBase.cpp			Sources)
 ze_add_source(ZEMinHeap.h				Sources Headers)
 ze_add_source(ZEMinHeap.cpp				Sources)
-ze_add_source(ZEMinHeapTests.cpp			Tests)
+ze_add_source(ZEMinHeapTests.cpp		Tests)
 ze_add_source(ZEMaxHeap.h				Sources Headers)
 ze_add_source(ZEMaxHeap.cpp				Sources)
-ze_add_source(ZEMaxHeapTests.cpp			Tests)
+ze_add_source(ZEMaxHeapTests.cpp		Tests)
 ze_add_source(ZEList.cpp				Sources)
 ze_add_source(ZEList.h					Sources Headers)
-ze_add_source(ZEListTests.cpp				Tests)
-ze_add_source(ZEListIterators.cpp			Sources)
-ze_add_source(ZEListIterators.h				Sources Headers)
-ze_add_source(ZEListIteratorsTests.cpp			Tests)
+ze_add_source(ZEListTests.cpp			Tests)
+ze_add_source(ZEListIterators.cpp		Sources)
+ze_add_source(ZEListIterators.h			Sources Headers)
+ze_add_source(ZEListIteratorsTests.cpp	Tests)
 ze_add_source(ZETree.cpp				Sources)
 ze_add_source(ZETree.h					Sources Headers)
 ze_add_source(ZEGraph.cpp				Sources)
 ze_add_source(ZEGraph.h					Sources Headers)
 ze_add_source(ZEPointer.cpp				Sources)
 ze_add_source(ZEPointer.h				Sources Headers)
-ze_add_source(ZEPointerTests.cpp			Tests)
-ze_add_source(ZESharedPointer.cpp			Sources)
-ze_add_source(ZESharedPointer.h				Sources Headers)
-ze_add_source(ZESharedPointerTests.cpp			Tests)
-ze_add_source(ZEWeakPointer.cpp				Sources)
-ze_add_source(ZEWeakPointer.h				Sources Headers)
-ze_add_source(ZEWeakPointerTests.cpp			Tests)
+ze_add_source(ZEPointerTests.cpp		Tests)
+ze_add_source(ZESharedPointer.cpp		Sources)
+ze_add_source(ZESharedPointer.h			Sources Headers)
+ze_add_source(ZESharedPointerTests.cpp	Tests)
+ze_add_source(ZEWeakPointer.cpp			Sources)
+ze_add_source(ZEWeakPointer.h			Sources Headers)
+ze_add_source(ZEWeakPointerTests.cpp	Tests)
 ze_add_source(ZEString.cpp				Sources)
 ze_add_source(ZEString.h				Sources Headers)
-ze_add_source(ZEStringTests.cpp				Tests)
-ze_add_source(ZETypedVariant.cpp			Sources)
-ze_add_source(ZETypedVariant.h				Sources Headers)
+ze_add_source(ZEStringTests.cpp			Tests)
+ze_add_source(ZETypedVariant.cpp		Sources)
+ze_add_source(ZETypedVariant.h			Sources Headers)
 ze_add_source(ZEVariant.cpp				Sources)
 ze_add_source(ZEVariant.h				Sources Headers)
-ze_add_source(ZEVariantTests.cpp			Tests)
-ze_add_source(ZEPointerTestClass.h			Tests)
-ze_add_source(ZEPointerTestClass.cpp			Tests)
-
+ze_add_source(ZEVariantTests.cpp		Tests)
+ze_add_source(ZEPointerTestClass.h		Tests)
+ze_add_source(ZEPointerTestClass.cpp	Tests)
+ze_add_source(ZEFormat.h				Sources Headers)
+ze_add_source(ZEFormat.cpp				Sources Headers)
+ze_add_source(ZEFormatOverloads.cpp		Sources Headers)
+ze_add_source(ZEStringWriter.cpp		Sources)
+ze_add_source(ZEStringWriter.h			Sources Headers)
 ze_add_library(ZEDS 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
