ADD: ZEHashGenerator implemented. IMP: ZEString can now hash strings by using ZEHashGenerator.
svn path=/trunk/; revision=1089

--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -69,6 +69,8 @@ ze_add_source(ZETree.cpp				Sources)
 ze_add_source(ZETree.h					Sources Headers)
 ze_add_source(ZEGraph.cpp				Sources)
 ze_add_source(ZEGraph.h					Sources Headers)
+ze_add_source(ZEHashGenerator.cpp		Sources)
+ze_add_source(ZEHashGenerator.h			Sources Headers)
 ze_add_source(ZEPointer.cpp				Sources)
 ze_add_source(ZEPointer.h				Sources Headers)
 ze_add_source(ZEPointerTests.cpp		Tests)
