CHG: ZE3dsMax plugins have been unified into single DLL. ADD: ZE3dsMaxUI plugin has been added which will be used to manage 3ds max plugin menus and actions. REM: ZE3dsProgressDialog has been removed.
svn path=/branches/v0.5.5-NewTools/; revision=1102

--- a/Source/ZE3dsMax/CMakeLists.txt
+++ b/Source/ZE3dsMax/CMakeLists.txt
@@ -48,10 +48,10 @@ include_directories(
 link_directories(
 	${ZEBUILD_LIB_PATH}/3dsMax/2010)
 	
-add_subdirectory(ZE3dsProgressDialog)
 add_subdirectory(ZE3dsModelExporter)
 add_subdirectory(ZE3dsMapExporter)
-add_subdirectory(ZE3dsMaxScript)
+add_subdirectory(ZE3dsMaxUI)
+add_subdirectory(ZE3dsMaxPlugin)
 
 add_custom_target(ZE3dsMax
 	SOURCES CMakeLists.txt)
