--- a/Source/ZE3dsMax/ZE3dsMapExporter/CMakeLists.txt
+++ b/Source/ZE3dsMax/ZE3dsMapExporter/CMakeLists.txt
@@ -35,8 +35,6 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZE3dsMapExporterDLLEntry.cpp		Sources)
-ze_add_source(ZE3dsMapExporterDLLEntry.h		Sources)
 ze_add_source(ZE3dsMapExporter.h				Sources)
 ze_add_source(ZE3dsMapExporter.cpp				Sources)
 ze_add_source(ZE3dsMapExporterDescription.h		Sources)
@@ -44,9 +42,7 @@ ze_add_source(ZE3dsMapExporterDescription.cpp	Sources)
 ze_add_source(ZE3dsMapExporterProcess.cpp		Sources)
 ze_add_source(ZEMapExporterOptionsDialog.h		Sources QtMocs)
 ze_add_source(ZEMapExporterOptionsDialog.cpp	Sources)
-ze_add_source(ZE3dsMapExporter.def				Sources)
 ze_add_source(ZEMapExporterOptionsWidget.ui		Sources QtUI)
-#ze_add_source(../ZE3dsProgressDialog/ZE3dsProgressDialogResources.rc	Sources)
 
 qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
@@ -54,23 +50,6 @@ qt4_wrap_cpp (QtMocFiles  ${QtMocs})
 
 ze_add_library(ZE3dsMapExporter 
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
-	LIBS ZEFoundation ZEToolAPI ZE3dsProgressDialog
-		core geom gfx mesh maxutil maxscrpt paramblk2 igame QtCore4 QtGui4 QWinWidget ZEProgressDialog ZEResourceConfigurationWidget
-	INSTALL
-	INSTALL_DESTINATION "Tools/Exporters/ZE3dsMax"
-	INSTALL_COMPONENT Tools
-	DLL)
+	LIBS ZEFoundation core geom gfx mesh maxutil maxscrpt paramblk2 igame QtCore4 QtGui4 QWinWidget ZEProgressDialog ZEResourceConfigurationWidget)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-	
-set_property(TARGET ZE3dsMapExporter PROPERTY FOLDER "ZE3dsMax")
-set_property(TARGET ZE3dsMapExporter PROPERTY SUFFIX ".dle")
-set_property(TARGET ZE3dsMapExporter PROPERTY CLEAN_DIRECT_OUTPUT 1)
-
-set(LOCAL_WARNING_FLAGS /W3)
-set(LOCAL_RTTI_FLAGS /GR)
-	
-set(MAX_BINARY_DIRECTORY "C:\\Program Files (x86)\\Autodesk\\3ds Max 2010")
-get_property(TargetPath TARGET ZE3dsMapExporter PROPERTY LOCATION)
-file(TO_NATIVE_PATH ${TargetPath} NativeTargetPath)
-add_custom_command (TARGET ZE3dsMapExporter POST_BUILD COMMAND copy "${NativeTargetPath}" "${ZEBUILD_3DS_MAX_BINARY_DIRECTORY}\\plugins")
