--- a/Source/ZEToolComponents/CMakeLists.txt
+++ b/Source/ZEToolComponents/CMakeLists.txt
@@ -38,16 +38,17 @@ cmake_minimum_required (VERSION 2.8)
 project (ZEToolComponents)
 ze_set_project_folder("ZEToolComponents")
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 add_subdirectory(ZEProgressDialog)
 add_subdirectory(ZEResourceConfigurationWidget)
+add_subdirectory(ZEResourceConfigurator)
 add_subdirectory(ZEMLVisualizer)
 
 ze_add_source(ZEToolComponentsMain.cpp		Sources)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
 ze_add_executable(ZEToolComponents 
 	SOURCES ${Sources}
 	LIBS
-		ZEFoundation ZEProgressDialog ZEResourceConfigurationWidget ZEMLVisualizerWidget
+		ZEFoundation ZEProgressDialog ZEResourceConfigurationWidget ZEMLVisualizerWidget ZEResourceConfigurator
 		QtCore4 QtGui4)
