ADD: ZEFC argument added to ze_add_source CMake command. Which is used for automatically generating embedded files. CHG: CMake script Version.txt parsing code has been revised. Branch name option has been added. IMP: Minor improvements has been made on ZEFileCompiler.cpp.
svn path=/trunk/; revision=1105

--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -44,4 +44,5 @@ ze_add_cmake_project(CMakeScripts
 		test_cocoon.cmake
 		ze.cmake
 		ze_functions.cmake
-		ze_qt.cmake)
+		ze_qt.cmake
+		ZEFindSubversion.cmake)
