MOD: ZE3dsMapExporter and ZE3dsModelExporter has been modified further for extensive logging and error handling during export processes. ADD: ZE3dsMaxUtils added for unifying common functions used by both ZE3dsMapExporter and ZE3dsModelExporter. MOD: ZEModelResource interior mechanisms for reading resources from files has been modified according to new ZE3dsModelExporter. MOD: ZEError has default callback functionality. MOD: Minor typho and refactor fixes.
svn path=/branches/v0.5.5-NewTools/; revision=1106

--- a/Source/ZE3dsMax/CMakeLists.txt
+++ b/Source/ZE3dsMax/CMakeLists.txt
@@ -52,6 +52,7 @@ add_subdirectory(ZE3dsModelExporter)
 add_subdirectory(ZE3dsMapExporter)
 add_subdirectory(ZE3dsMaxUI)
 add_subdirectory(ZE3dsMaxPlugin)
+add_subdirectory(ZE3dsMaxUtils)
 
 add_custom_target(ZE3dsMax
 	SOURCES CMakeLists.txt)
