--- a/Source/ZETools/ZEToolComponents/ZEResourceConfigurationWidget/CMakeLists.txt
+++ b/Source/ZETools/ZEToolComponents/ZEResourceConfigurationWidget/CMakeLists.txt
@@ -35,21 +35,23 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEProgressDialog.h		Sources)
-ze_add_source(ZEProgressDialog.cpp		Sources)
-ze_add_source(ZEProgressDialogTask.h		Sources)
-ze_add_source(ZEProgressDialogTask.cpp		Sources)
-ze_add_source(ZEProgressDialog.ui		Sources QtUI)
-ze_add_source(ZEProgresDialogSignalHandler.h		Sources QtMocs)
-ze_add_source(ZEProgresDialogSignalHandler.cpp		Sources)
-ze_add_source(ZEProgressDialogTreeWidget.h			Sources)
-ze_add_source(ZEProgressDialogTreeWidget.cpp		Sources)
-
-qt4_add_resources (QtResourceFiles ${QtResources})
-qt4_wrap_ui (QtUIFiles ${QtUI})
-qt4_wrap_cpp (QtMocFiles  ${QtMocs})
-
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-ze_add_library(ZEProgressDialog 
-	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles})
+ze_add_source(ZEResourceOptionWidget.ui				Sources QtUI)
+ze_add_source(ZEResourceConfigurationWidget.ui		Sources QtUI)
+ze_add_source(ZEResourceConfigurationWidget.h		Sources)
+ze_add_source(ZEResourceConfigurationWidget.cpp		Sources)
+ze_add_source(ZEResourceOptionWidget.h				Sources QtMocs)
+ze_add_source(ZEResourceOptionWidget.cpp			Sources)
+ze_add_source(ZEResourceOptionTreeItem.cpp			Sources)
+ze_add_source(ZEResourceOptionTreeItem.h			Sources)
+ze_add_source(ZEResourceConfigurationWidgetQt.cpp	Sources)
+ze_add_source(ZEResourceConfigurationWidgetQt.h		Sources QtMocs)
+
+qt4_add_resources(QtResourceFiles ${QtResources})
+qt4_wrap_ui(QtUIFiles ${QtUI})
+qt4_wrap_cpp(QtMocFiles  ${QtMocs})
+
+ze_add_library(ZEResourceConfigurationWidget 
+	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
+	LIBS ZEResourceConfigurator)
